Fix: offset calculation bug
